Fnished crud
