# api-gateway/api/docs/swagger.json
@@ -315,15 +315,15 @@
                 "tags": [
                     "post"
                 ],
-                "summary": "CreatePost ...",
+                "summary": "Create Post ...",
                 "parameters": [
                     {
                         "description": "createPost",
-                        "name": "Product",
+                        "name": "Post",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Post"
+                            "$ref": "#/definitions/models.PostRequest"
                         }
                     }
                 ],
@@ -956,6 +956,32 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "models.PostRequest": {
+            "type": "object",
+            "properties": {
+                "categories": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "dislikes": {
+                    "type": "integer"
+                },
+                "likes": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "views": {
+                    "type": "integer"
                 }
             }
         },
